crates/markdown-neuraxis-engine/src/editing/snapshots/inlines/autolink.snap
---
source: crates/markdown-neuraxis-engine/src/editing/snapshot.rs
expression: formatted
---
Paragraph [0..22]
  segments:
    Text [0..21] "<https://example.com>"
