crates/markdown-neuraxis-engine/src/editing/snapshots/inlines/block_ref.snap
---
source: crates/markdown-neuraxis-engine/src/editing/snapshot.rs
expression: formatted
---
Paragraph [0..41]
  segments:
    Text [0..40] "((12345678-1234-1234-1234-123456789012))"
