crates/markdown-neuraxis-engine/src/editing/snapshots/inlines/code_span.snap
---
source: crates/markdown-neuraxis-engine/src/editing/snapshot.rs
expression: formatted
---
Paragraph [0..14]
  segments:
    Code [0..13] "inline code"
