crates/markdown-neuraxis-engine/src/editing/snapshots/inlines/link_with_title.snap
---
source: crates/markdown-neuraxis-engine/src/editing/snapshot.rs
expression: formatted
---
Paragraph [0..46]
  segments:
    Link [0..45] text:"link text" url:"https://example.com \"Link Title\""
