crates/markdown-neuraxis-engine/src/editing/snapshots/inlines/property.snap
---
source: crates/markdown-neuraxis-engine/src/editing/snapshot.rs
expression: formatted
---
Paragraph [0..14]
  segments:
    Text [0..13] "status:: TODO"
