crates/markdown-neuraxis-engine/src/editing/snapshots/inlines/strikethrough.snap
---
source: crates/markdown-neuraxis-engine/src/editing/snapshot.rs
expression: formatted
---
Paragraph [0..23]
  segments:
    Strikethrough [0..22] "strikethrough text"
